New PIS message

--- a/portal/templates/_base.html
+++ b/portal/templates/_base.html
@@ -13,6 +13,15 @@
   <div class="alert alert-warning" role="alert">
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
     <span class="sr-only">Warning:</span>
+      We have redesigned our full and abbreviated participant information sheets.
+      They now have our new logo, are on A4 sheets and the abbreviated sheet is in a larger font.
+      The versions have not changed (full leaflet is version 4 and the abbreviated is version 3),
+      so if you have existing stock this is still fine to use.  We hope you like them!
+  </div>
+
+  <div class="alert alert-warning" role="alert">
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+    <span class="sr-only">Warning:</span>
         Important message to all recruiting sites.
         Patients attending their 5 year follow-up health
         check who are already GENVASC participants cannot
