--- a/portal/templates/_base.html
+++ b/portal/templates/_base.html
@@ -39,13 +39,10 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
+        <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentation <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="{{ url_for('site_file_documentation') }}">Site File Documentation</a></li>
-                  {% if current_user.is_admin() %}
-                    <li><a href="{{ url_for('site_file_documentation_study_admin') }}">Study Admin Team</a></li>
-                  {% endif %}
+                  <li><a href="/documentation">Site File Documentation</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="{{ url_for('help') }}">Help</a></li>
               </ul>
