--- a/portal/templates/_base.html
+++ b/portal/templates/_base.html
@@ -42,7 +42,7 @@
         <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentation <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li><a href="/documentation">Site File Documentation</a></li>
+                  <li><a href="/documentation" target="_blank">Site File Documentation</a></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="{{ url_for('help') }}">Help</a></li>
               </ul>
