Fix IE11 rendering issue

--- a/portal/templates/_subbase.html
+++ b/portal/templates/_subbase.html
@@ -4,6 +4,7 @@
   {% set site_name = 'GENVASC GP Portal' %}
 
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <title>GENVASC GP Portal</title>
     <!-- meta -->
@@ -20,7 +21,7 @@
     <link rel='stylesheet' id='megamenu-google-fonts-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A400%2C700&#038;ver=4.8' type='text/css' media='all' />
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/main.css', ver=13) }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/main.css', ver=15) }}" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css">
 
     {% block css %}{% endblock %}
