Etl users and delegates

--- a/portal/ui/templates/practices/delegates/index.html
+++ b/portal/ui/templates/practices/delegates/index.html
@@ -32,7 +32,7 @@
           </div>
           <div>
             <dt>GCP Trained</dt>
-            <dd>{{ d.gcp_training | yes_no }}</dd>
+            <dd>{{ d.gcp_trained | yes_no }}</dd>
           </div>
           <div>
             <dt>GENVASC Trained</dt>
