--- a/portal/ui/templates/practices/delegates/pdf.html
+++ b/portal/ui/templates/practices/delegates/pdf.html
@@ -81,7 +81,7 @@
                     </td>
 					<td>
                         <p><strong>1&deg; Contact:</strong> {{ d.primary_contact_yn | yes_no }}</p>                        
-                        <p><strong>GCP Trained:</strong> {{ d.gcp_training | yes_no }}</p>                        
+                        <p><strong>GCP Trained:</strong> {{ d.gcp_trained | yes_no }}</p>                        
                         <p><strong>GENVASC Trained:</strong> {{ d.gv_trained | yes_no }}</p>                        
                         <p><strong>Delegation Log:</strong> {{ d.on_delegation_log_yn | yes_no }}</p>                        
                     </td>
