--- a/portal/templates/_formHelpers.html
+++ b/portal/templates/_formHelpers.html
@@ -1,6 +1,6 @@
 {% macro render_field(field, label=None) %}
   <div class="row">
-    <div class="form-group{% if field.errors %} has-error{%endif%} col-md-offset-1 col-md-10">
+    <div class="form-group{% if field.errors %} has-error{%endif%} col-md-12">
         {% if field.type == "HiddenField" or field.type == "CSRFTokenField" %}
         {% elif field.type == "BooleanField" %}
             {{ field.label(class="control-label", text=label) }}{{ render_checkbox_field_control(field, **kwargs) }}
@@ -29,11 +29,13 @@
 {% endmacro %}
 
 
-{% macro render_button_bar(cancelview) %}
+{% macro render_button_bar(cancelview, submit_label="Save") %}
       <div class="form-group text-right">
           <div>
-              <a href="{{ url_for(cancelview) }}" class="btn btn-default" role="button">Cancel</a>
-              <button type="submit" class="btn btn-primary">Save</button>
+              {% if cancelview %}
+                <a href="{{ url_for(cancelview) }}" class="btn btn-default" role="button">Cancel</a>
+              {% endif %}
+              <button type="submit" class="btn btn-primary">{{ submit_label }}</button>
           </div>
       </div>
 {% endmacro %}
@@ -57,26 +59,35 @@
 {% endmacro %}
 
 
-{% macro render_search(searchForm, searchview, buttons={}, checkboxes={}) %}
+{% macro render_search(searchForm, searchview, placeholder='enter search text', buttons={}, checkboxes={}) %}
 <form method="GET" class="form-horizontal" action="{{ url_for(searchview, **kwargs) }}">
 
   <div class="input-group">
-      {{ searchForm.search(class="form-control", placeholder="enter search text - searches study number, protocol deviation and comments") | safe }}
-      {% for key, value in checkboxes.items() %}
-        <span class="input-group-addon">
-            <input type="checkbox" id="{{ key }}" aria-label="{{ value }}">
-            <span>{{ value }}</span>
-        </span>
+      {{ searchForm.search(class="form-control", placeholder=placeholder) | safe }}
+      {% for field in searchForm %}
+        {% if field.type == "BooleanField" %}
+          <div class="input-group-append">
+            <div class="input-group-text">
+              {{ field(**kwargs)|safe }}
+              {{ field.label.text }}
+            </div>
+          </div>
+          {% endif %}
       {% endfor %}
-      <div class="input-group-btn">
-        <button type="submit" class="btn btn-primary">Search</button>
-        <a class="btn btn-primary" href="{{ url_for(searchview, **kwargs) }}">Clear Search</a>
+      {% for key, value in buttons.items() %}
+        <a href="{{ url_for(value, **kwargs) }}">{{ key }}</a>
+      {% endfor %}
 
-        {% for key, value in buttons.items() %}
-          <a class="btn btn-primary" href="{{ url_for(value, **kwargs) }}">{{ key }}</a>
-        {% endfor %}
+      <div class="input-group-append">
+        <span class="input-group-text">
+            <a href="{{ url_for(searchview, **kwargs) }}">Clear Search</a>
+        </span>
       </div>
-  </div>
+      <div class="input-group-append">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+  
+    </div>
 </form>
 {% endmacro %}
 
@@ -85,27 +96,27 @@
   {% if pagination.pages > 1 %}
     <ul class="pagination">
     {% if pagination.has_prev %}
-      <li><a href="{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}" rel="prev">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}" rel="prev">Previous</a></li>
     {% else %}
-      <li class="disabled"><a>Previous</a></li>
+      <li class="page-item disabled"><a class="page-link">Previous</a></li>
     {% endif %}
 
     {%- for page in pagination.iter_pages(left_edge=1, left_current=2, right_current=3, right_edge=1) %}
       {% if page %}
         {% if page != pagination.page %}
-          <li><a href="{{ url_for(endpoint, page=page, **kwargs) }}">{{ page }}</a></li>
+          <li class="page-item"><a class="page-link" href="{{ url_for(endpoint, page=page, **kwargs) }}">{{ page }}</a></li>
         {% else %}
-          <li class="active"><a>{{ page }}</a></li>
+          <li class="page-item active"><a class="page-link">{{ page }}</a></li>
         {% endif %}
       {% else %}
-        <li class="disabled"><a>…</a></li>
+        <li class="page-item disabled"><a class="page-link">…</a></li>
       {% endif %}
     {%- endfor %}
 
     {% if pagination.has_next %}
-      <li><a href="{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}" rel="next">Next</a></li>
+      <li class="page-item"><a class="page-link" href="{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}" rel="next">Next</a></li>
     {% else %}
-      <li class="disabled"><a>Next</a></li>
+      <li class="page-item disabled"><a class="page-link">Next</a></li>
     {% endif %}
     </ul>
   {% endif %}
