--- a/portal/ui/templates/practices/index.html
+++ b/portal/ui/templates/practices/index.html
@@ -4,41 +4,26 @@
 {% block content %}
 
 <div>
-  <div>
-      <section>
-        <h1>Practices</h1>
-        {{ formhelper.render_search(searchForm, 'ui.practices_index', {}) }}
-      </section>                
-  </div>
-  <div>
-      {% if registrations.items | length > 0 %}
+  <section>
+    <h1>Practices</h1>
 
-          <table class="table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Code</th>
-                <th>Name</th>
-              </tr>
-            </thead>
-            <tbody>
-            {% for r in registrations.items %}
-              <tr>
-                <td>
-                    <a class="btn btn-default" href="{{ url_for('ui.recruits_index', code=r.code) }}"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"> Recruits</span></a>
-                </td>
-                <td>{{r.practice.code}}</td>
-                <td>{{r.practice.name}}</td>
-              </tr>
-            {% endfor %}
-            </tbody>
-          </table>      
-        
-      {% endif %}
+    {{ formhelper.render_search(searchForm, 'ui.practices_index') }}
 
-  </div>
+    {% if practices.items | length > 0 %}
 
-  {{ formhelper.render_pagination(registrations, 'ui.practices_index', search=searchForm.search.data) }}
+      <ul class="list-group">
+        {% for p in practices.items %}
+            <li class="list-group-item">
+              <a href="{{ url_for('ui.recruits_index', code=p.code) }}">{{ p.code }}: {{ p.name }}</a>
+            </li>
+        {% endfor %}
+      </ul>
+
+    {% endif %}
+
+    {{ formhelper.render_pagination(practices, 'ui.practices_index', search=searchForm.search.data) }}
+
+  </section>
 
 </div>
 
