--- a/portal/ui/templates/submissions/participants.html
+++ b/portal/ui/templates/submissions/participants.html
@@ -30,7 +30,7 @@
 						<td>{{ p.practice.code }}</td>
 						<td>{{ p.practice.name }}</td>
 						<td>{{ p.practice.full_address }}</td>
-						<td>{{ p.practice.ccg }}</td>
+						<td>{{ p.practice.ccg_name }}</td>
 					</tr>
 				{% endfor %}
 			</tbody>
