--- a/portal/templates/_formHelpers.html
+++ b/portal/templates/_formHelpers.html
@@ -74,11 +74,13 @@
           </div>
           {% endif %}
       {% endfor %}
-      {% for key, value in buttons.items() %}
-        <a href="{{ url_for(value, **kwargs) }}">{{ key }}</a>
-      {% endfor %}
 
       <div class="input-group-append">
+        {% for key, value in buttons.items() %}
+          <span class="input-group-text">
+            <a href="{{ url_for(value, **kwargs) }}">{{ key }}</a>
+          </span>
+        {% endfor %}
         <span class="input-group-text">
             <a href="{{ url_for(searchview, **kwargs) }}">Clear Search</a>
         </span>
