--- a/portal/templates/_loginFormBase.html
+++ b/portal/templates/_loginFormBase.html
@@ -22,13 +22,16 @@
           {% endif %}
 
 
-          <div class="row">
-              <div class="alert {{class}}" role="alert">
-                  <i class="fas {{fas_class}}"></i>
-                  <span class="sr-only">{{category}}:</span>
-                  {{message}}
-              </div>
+          <div class="justify-content-center">
+            <div class="alert {{class}}" role="alert">
+              <h2>
+                <i class="fas {{fas_class}}"></i>
+                <span class="sr-only">{{category}}:</span>
+              </h2>
+              <p>{{message}}</p>
+            </div>
           </div>
+
         {% endfor %}
       {% endwith %}
 
