--- a/portal/ui/templates/practices/delegates/pdf.html
+++ b/portal/ui/templates/practices/delegates/pdf.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{{ practice.practice.name }}</title>
+  <title>{{ practice.name }}</title>
 
   <style>
   	@page {
@@ -65,7 +65,7 @@
 
 <body>
 
-	<h1>{{ practice.practice.name }}</h1>
+	<h1>{{ practice.name }}</h1>
 	<h2>Staff</h2>
 
 	<table class="staff">
