--- a/portal/ui/templates/submissions/participants.html
+++ b/portal/ui/templates/submissions/participants.html
@@ -37,6 +37,6 @@
 		</table>
 </section>
 
-{{ formhelper.render_pagination(participants, 'submissions_participants', invoice_year=invoice_year, invoice_quarter=invoice_quarter) }}
+{{ formhelper.render_pagination(participants, 'ui.submissions_participants', invoice_year=invoice_year, invoice_quarter=invoice_quarter) }}
 
 {% endblock %}
