--- a/portal/templates/security/forgot_password.html
+++ b/portal/templates/security/forgot_password.html
@@ -2,7 +2,7 @@
 {% import "_formHelpers.html" as formhelper %}
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 
-{% block formname %}First Login or Forgotten Password{% endblock%}
+{% block formname %}Set Password{% endblock%}
 {% block errors %}
     {{ formhelper.render_form_errors(forgot_password_form)  }}
 {% endblock %}
@@ -11,13 +11,12 @@
 
 <div class="description">
     <p>
-        This page can be used to set a new password
-        when you first access the system or if you
-        have forgotten your password.
+        This page can be used to set a password on registration
+        or when you have forgotten your password.
     </p>
     <p>
         Enter your email address that is registered with
-        the portal.  We will then send an email to that
+        the GENVASC team.  We will then send an email to that
         address which will allow you to set a new password.
     </p>
     <p>
@@ -40,7 +39,7 @@
 	</div>
 
     <div class="text-right">
-        <a href="{{ url_for_security('login') }}" class="btn btn-info" role="button">Login</a>
+        <a href="{{ url_for_security('login') }}" class="btn btn-light" role="button">Back to Login</a>
         <button type="submit" class="btn btn-primary">Send Set Password Link</button>
     </div>
 </form>
